fix: menu z-index on mobile version

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -132,7 +132,8 @@ body.noscroll {
 .header__logo img {
   width: 8.8125rem;
   height: 1.375rem;
-  object-fit: none;
+  -o-object-fit: none;
+     object-fit: none;
 }
 .header__menu {
   background-color: hsl(0deg, 0%, 100%);
@@ -143,6 +144,7 @@ body.noscroll {
   text-align: center;
   width: calc(100% - 3rem);
   font-weight: 400;
+  z-index: 9999;
 }
 .header__menu > li {
   color: hsl(233deg, 26%, 24%);
@@ -195,6 +197,7 @@ body.noscroll {
   bottom: 0;
   left: 0;
   background-image: linear-gradient(hsl(233deg, 26%, 24%), transparent);
+  z-index: 999;
 }
 
 .hero {
@@ -514,6 +517,21 @@ body.noscroll {
   visibility: hidden;
 }
 
+@-webkit-keyframes fade-in {
+  from {
+    visibility: hidden;
+    opacity: 0;
+  }
+  1% {
+    visibility: visible;
+    opacity: 0;
+  }
+  to {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
 @keyframes fade-in {
   from {
     visibility: hidden;
@@ -529,7 +547,23 @@ body.noscroll {
   }
 }
 .fade-in {
-  animation: fade-in 0.2s ease-in-out forwards;
+  -webkit-animation: fade-in 0.2s ease-in-out forwards;
+          animation: fade-in 0.2s ease-in-out forwards;
+}
+
+@-webkit-keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  99% {
+    visibility: visible;
+    opacity: 0;
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
 }
 
 @keyframes fade-out {
@@ -547,7 +581,8 @@ body.noscroll {
   }
 }
 .fade-out {
-  animation: fade-out 0.2s ease-in-out forwards;
+  -webkit-animation: fade-out 0.2s ease-in-out forwards;
+          animation: fade-out 0.2s ease-in-out forwards;
 }
 
 .flex {
